# slabhiddevice

./: Cargo.toml  README.md
examples/: cp2112.rs
src/: constant.rs  error.rs  hiddevice.rs  lib.rs  types.rs
